--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "framer-motion": "4",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^16.3.0",
