--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "framer-motion": "4",
+    "immer": "^9.0.5",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dnd": "^14.0.2",
