--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -22,7 +22,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/components/Board/index.tsx", "src/services/api.tsx", "src/components/Card/index.js", "src/components/Card/index.js"  ],
+, "src/components/Board/index.tsx", "src/services/api.jsx", "src/components/Card/index.tsx", "src/components/Card/index.tsx", "src/components/List/index.tsx", "src/components/List/index.tsx"  ],
   "exclude": [
     "node_modules"
   ]
